--- a/src/main/resources/templates/view.html
+++ b/src/main/resources/templates/view.html
@@ -7,20 +7,30 @@
 
 <nav th:replace="fragments :: page-header"></nav>
 
-<div class="job-listing">
-    <p th:text="${'ID: ' + job.id}"></p>
-    <p th:text="${'Name: ' + job.name}"></p>
-    <p>
-        Employer: <a th:href="@{'/employers/view/' + ${job.employer.id}}" th:text="${job.employer.name}"></a>
-    </p>
-    <p> Skills:
-        <ul>
-            <li th:each="skill : ${job.skills}">
-                <a th:href="@{'/skills/view/' + ${skill.id}}" th:text="${skill.name}"></a>
-            </li>
-        </ul>
-    </p>
-</div>
+<table class="job-listing">
+    <tr>
+        <th>ID</th>
+        <td><a th:href="@{'/view/' + ${job.id}}" th:text="${job.id}"></a></td>
+    </tr>
+    <tr>
+        <th>Name</th>
+        <td th:text="${job.name}"></td>
+    </tr>
+    <tr>
+        <th>Employer</th>
+        <td><a th:href="@{'/employers/view/' + ${job.employer.id}}" th:text="${job.employer.name}"></a></td>
+    </tr>
+    <tr>
+        <th>Skills</th>
+        <td>
+            <ul th:each="skill : ${job.skills}">
+                <li>
+                    <a th:href="@{'/skills/view/' + ${skill.id}}" th:text="${skill.name}"></a>
+                </li>
+            </ul>
+        </td>
+    </tr>
+</table>
 
 
 </body>
