--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -16,6 +16,7 @@
         <th>All</th>
         <th>Employer</th>
         <th>Skill</th>
+        <th>Location</th>
     </tr>
 
     <tr>
@@ -32,6 +33,11 @@
         <td>
             <li th:each="skill : ${skills}">
                 <a th:href="@{/list/jobs(column=skill,value=${skill.name})}" th:text="${skill.name}"></a>
+            </li>
+        </td>
+        <td>
+            <li th:each="employer : ${employers}">
+                <a th:href="@{/list/jobs(column=location,value=${employer.location})}" th:text="${employer.location}"></a>
             </li>
         </td>
     </tr>
